# sentiment_ANALYSIS

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  chatbot.example.json  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
chatbot/: __init__.py  aggregator.py  alerts.py  analyzer.py  api.py  async_support.py  batch.py  bot.py  cache.py  cleaner.py  cli.py  comparator.py  comparison.py  confidence.py  config.py  constants.py  context.py  conversation.py  debug.py  decorators.py  emoji.py  emotions.py  ensemble.py  env.py  events.py  exceptions.py  exporter.py  feedback.py  filters.py  flow.py  formatters.py  health.py  history.py  hooks.py  intent.py  keywords.py  language.py  logger.py  metrics.py  middleware.py  (+36 more)
chatbot/utils/: __init__.py
examples/: advanced_usage.py  basic_usage.py  emotion_detection.py  streaming_example.py  webhook_example.py
scripts/: benchmark.py  run.sh
tests/: __init__.py  conftest.py  test_aggregator.py  test_alerts.py  test_analyzer.py  test_api.py  test_batch.py  test_bot.py  test_cache.py  test_cleaner.py  test_cli.py  test_comparator.py  test_comparison.py  test_confidence.py  test_config.py  test_context.py  test_conversation.py  test_debug.py  test_emoji.py  test_emotions.py  test_ensemble.py  test_env.py  test_events.py  test_exceptions.py  test_exporter.py  test_feedback.py  test_filters.py  test_flow.py  test_formatters.py  test_health.py  test_history.py  test_hooks.py  test_integration.py  test_intent.py  test_keywords.py  test_language.py  test_logger.py  test_metrics.py  test_middleware.py  test_mixer.py  (+34 more)
utils/: __init__.py
